turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:40: error: not found: value couleurAMEttre
	setCouleurBrosse(colors(couleurAMEttre))
                                ^