turmites.lessons.turmites.helloturmite.HelloTurmite.scala.code
var state = 0;

var a:Int=0
var i:Int=0
var trouve: Boolean=false
var couleurAMettre: Int=0
var mvtAEffectuer: Int=0

def step(colors:Array[Color], rule:Array[Array[Array[Int]]] ) 
{
	while (!trouve)
	{
		if (getCouleurSol()==colors(i))
		{
			trouve=true
			if (i!=colors.length-1)
			{
				a=i
			}
			else
			{
				a=0
			}
		}
		else
		{
			if (i!=colors.length-1)
			{
				i=i+1
			}
			else 
			{
				i=0
			}
		}
	}

	couleurAMettre=rule(state)(a)(0)
	setCouleurBrosse(colors(couleurAMEttre))
	baisseBrosse()
	leveBrosse()

	mvtAEffectuer=rule(state)(a)(1)
	if (mvtAEffectuer==1)
	{
		avance()
	}
	else if (mvtAEffectuer==2)
	{
		gauche()
		avance()
	}
	else if (mvtAEffectuer==4)
	{
		gauche()
		gauche()
		avance()
	}
	else if (mvtAEffectuer==8)
	{
		droite()
		avance()
	}

	state=rule(state)(a)(2)

}
